<resources>
    <string name="app_name">CheckBox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Do you have these pets?</string>
    <string name="dog_title">Dog</string>
    <string name="cat_title">Cat</string>
    <string name="dragon_title">Dragon</string>
    <string name="show_button_text">Show</string>
</resources>
